force-app/main/default/objects/QuoteLineItem/fields/Mat_Descuento__c.field-meta.xml
<CustomField>
    <fullName>Mat_Descuento__c</fullName>
    <description
  >Conserva el descuento original del servicio, incluyendo valores no disponibles.</description>
    <inlineHelpText
  >Valores guardados al generar la cotización. Consulta el registro de origen para ver los valores actuales.</inlineHelpText>
    <label>Descuento cotizado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>