force-app/main/default/objects/QuoteLineItem/fields/Mat_Nombre_servicio__c.field-meta.xml
<CustomField>
    <fullName>Mat_Nombre_servicio__c</fullName>
    <description
  >Conserva el nombre del producto al generar la cotización, sin incluir el talento.</description>
    <inlineHelpText
  >Valores guardados al generar la cotización. Consulta el registro de origen para ver los valores actuales.</inlineHelpText>
    <label>Servicio cotizado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>