force-app/main/default/objects/QuoteLineItem/fields/Mat_Servicio_de_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Mat_Servicio_de_oportunidad__c</fullName>
    <description
  >Permite consultar el servicio que originó esta línea; los importes cotizados permanecen guardados aquí.</description>
    <inlineHelpText
  >Valores guardados al generar la cotización. Consulta el registro de origen para ver los valores actuales.</inlineHelpText>
    <label>Servicio de oportunidad origen</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Mat_Servicios_de_oportunidad__c</referenceTo>
    <relationshipLabel>Líneas de cotizaciones</relationshipLabel>
    <relationshipName>Mat_Lineas_cotizaciones</relationshipName>
    <type>Lookup</type>
</CustomField>