force-app/main/default/objects/QuoteLineItem/fields/Mat_Tarifa__c.field-meta.xml
<CustomField>
    <fullName>Mat_Tarifa__c</fullName>
    <description
  >Conserva la tarifa original del servicio de oportunidad, incluyendo valores no disponibles.</description>
    <inlineHelpText
  >Valores guardados al generar la cotización. Consulta el registro de origen para ver los valores actuales.</inlineHelpText>
    <label>Tarifa cotizada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>