force-app/main/default/objects/QuoteLineItem/fields/Mat_Tarifa_negociada__c.field-meta.xml
<CustomField>
    <fullName>Mat_Tarifa_negociada__c</fullName>
    <description
  >Conserva la tarifa negociada guardada del servicio sin recalcularla desde la lista de precios.</description>
    <inlineHelpText
  >Valores guardados al generar la cotización. Consulta el registro de origen para ver los valores actuales.</inlineHelpText>
    <label>Tarifa negociada cotizada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>